--- a/futmm/pubspec.yaml
+++ b/futmm/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   firebase_core : ^0.4.0
   firebase_auth: ^0.14.0+5
+  firebase_database: ^3.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
