--- a/futmm/android/build.gradle
+++ b/futmm/android/build.gradle
@@ -3,20 +3,26 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {                                    //add this section
+            url "https://maven.google.com"
+        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:3.2.1'
+        classpath 'com.google.gms:google-services:4.2.0'
     }
+
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+
     }
+
 }
 
 rootProject.buildDir = '../build'
