--- a/futmm/pubspec.yaml
+++ b/futmm/pubspec.yaml
@@ -19,8 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core : ^0.4.0
+  firebase_core : ^0.4.1+5
   firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.10
+  firebase_messaging: ^5.1.8
 
 
   # The following adds the Cupertino Icons font to your application.
