--- a/futmm/pubspec.yaml
+++ b/futmm/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.10
   firebase_messaging: ^5.1.8
+  after_layout: ^1.0.7+2
 
 
   # The following adds the Cupertino Icons font to your application.
