--- a/futmm/pubspec.yaml
+++ b/futmm/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   image_picker: ^0.5.0
   path_provider: ^1.4.5
   firebase_storage: ^3.0.8
-
+  theme_provider: ^0.3.1
+  flutter_signin_button: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,23 +38,37 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: "^0.7.3"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/appIcon.png"
+
 flutter:
+
+  assets:
+    - assets/imagens/
+    - assets/images/onboard/
+    - assets/images/
+
+  fonts:
+    - family: CM Sans Serif
+      fonts:
+        - asset: assets/fonts/cm_sans_serif_2012.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
-
   # To add assets to your application, add an assets section, like this:
-  assets:
-  - assets/imagens/
+  # assets:
+  #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
