--- a/futmm/pubspec.yaml
+++ b/futmm/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: ^0.5.0
   path_provider: ^1.4.5
   firebase_storage: ^3.0.8
+  dropdownfield: 1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
