--- a/futmm/pubspec.yaml
+++ b/futmm/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/images/
     - assets/images/UserApp/
     - assets/imagens/
+    - assets/images/news_tab/
 
   fonts:
     - family: CM Sans Serif
