--- a/futmm/pubspec.yaml
+++ b/futmm/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_image_compress: ^0.6.3
   flutter_calendar_carousel: ^1.4.9
   flutter_email_sender: ^2.2.2
+  mailer: ^3.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
